[gd_scene load_steps=2 format=3 uid="uid://d2qf13e27gjdi"]

[ext_resource type="Script" path="res://addons/ggs/editor/setting_panel/setting_group/setting_group.gd" id="1_yot62"]

[node name="SettingGroup" type="PanelContainer"]
custom_minimum_size = Vector2(150, 0)
size_flags_horizontal = 3
theme_type_variation = &"SettingItemBG"
script = ExtResource("1_yot62")

[node name="MainCtnr" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="GroupName" type="CheckBox" parent="MainCtnr"]
layout_mode = 2
text_overrun_behavior = 3

[node name="HSep" type="HSeparator" parent="MainCtnr"]
layout_mode = 2

[node name="ItemCtnr" type="HFlowContainer" parent="MainCtnr"]
layout_mode = 2
